coded visuals fo coding quiz with HTML/CSS

--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 </head>
 
 <body>
-    <h1>Coding Quiz Challenge</h1>
-    <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers
-        will penalize your score/time by ten seconds!</p>
-    <div id="quiz"></div>
+    <link id="scores">High Scores</link>
+
+    <span>Time: <link id = "time">60</link></span>
+
+    <div id="quiz">
+        <h1>Coding Quiz Challenge</h1>
+        <p>Try to answer the following code-related questions within the time limit.<br>
+            Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+    </div>
+
     <button id="start">Start Quiz</button>
-    <div id=""></div>
-    
-    <script src="script.js"></script>
+
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
