--- a/highScores.html
+++ b/highScores.html
@@ -8,3 +8,18 @@
     <link rel="stylesheet" href="style.css" />
     <title>Code Quiz High Scores</title>
 </head>
+
+<body>
+    <div id="container">
+        <div id="scores">
+            <h1>High Scores</h1>
+            <ul id="topScores"></ul>
+
+            <button id="mainPage">Go Back</button>
+            <button id="clear">Clear</button>
+        </div>
+    </div>
+
+</body>
+
+</html>
