--- a/highScores.html
+++ b/highScores.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <a href="index.html"></a>
     <title>Code Quiz High Scores</title>
 </head>
 
